fix: fix some mistakes after rebase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.influx.password=${influxdbAdminPassword}
 # ===============================
 
 jwt.secret=${jwtSecret}
-jwt.expiration-time=40000
+jwt.expiration-time=40000000
 
 
 # ===============================
