--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
 //  Highly customizable authentication and access-control framework for Spring applications.
-  //implementation 'org.springframework.boot:spring-boot-starter-security'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
 
 //  Java annotation library which helps to reduce boilerplate code.
   compileOnly 'org.projectlombok:lombok'
