build: add another secret (the email account password)

--- a/.env.template
+++ b/.env.template
@@ -10,5 +10,8 @@ INFLUXDB_ADMIN_PASSWORD=
 # JWT
 JWT_SECRET=
 
+# Email account used for password recovery
+EMAIL_ACCOUNT_PASSWORD=
+
 # SonarCloud login token
 SONARCLOUD_LOGIN=
