--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,8 @@
     "vscjava.vscode-java-dependency",
     // "vscjava.vscode-java-test",
     // "vscjava.vscode-spring-boot-dashboard",
+    // GRADLE
+    "naco-siren.gradle-language",
     // -------- COMMONS --------
     // DOCKER
     "exiasr.hadolint",
