build: add some production-ready features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,8 @@ spring.main.banner-mode=off
 # spring.main.lazy-initialization=true
 # TODO test if this works
 # spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=true
+
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
+management.endpoint.mappings.enabled=true
+management.endpoints.web.exposure.include=*
