refactor: do not use public classes and methods in tests

--- a/api/model/MultiLocationInfo.v1.yaml
+++ b/api/model/MultiLocationInfo.v1.yaml
@@ -14,7 +14,7 @@ properties:
       - $ref: ./GenericId.v1.yaml
       - type: boolean
         enum:
-          - "false"
+          - false
   inside:
     type: boolean
   placeIds:
