chore: add task and ignore irrelevant file. do not fail fast when testing

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ gradle/wrapper/gradle-wrapper.properties!gradle/wrapper/gradle-wrapper.jar
 
 # SonarLint
 .idea/sonarlint/
+.idea/sonarlint-state.xml
 
 .idea/artifacts
 .idea/compiler.xml
