--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,8 @@ test {
   useJUnitPlatform()
 
   // this is opinable. feel free to change it to false if it feels better for you :)
-  failFast = true
+  // failFast = true
+  failFast = false
 
   finalizedBy {
     jacocoTestReport
