fix: remove error response when recovering password
the server should not give any information whether a user is registered or not

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -114,6 +114,7 @@ except:
     - required-bad-request-response
     - required-forbidden-response
   'api/openapi.yaml#/paths/~1user~1password~1recovery/post/responses':
+    - required-bad-request-response
     - required-unauthorized-response
     - required-forbidden-response
   'api/openapi.yaml#/paths/~1version/get/responses':
