--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,15 @@ spring.application.version=${version}
 # ===============================
 # = RELATIONAL DATABASE
 # ===============================
-# TODO test if this works
-# spring.r2dbc.url=r2dbc:pool:mysql://localhost:3306/stalker-rdb
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/stalker-rdb
+spring.r2dbc.url=r2dbc:pool:mysql://localhost:3306/stalker-rdb
+spring.r2dbc.pool.initial-size=5
+spring.r2dbc.pool.max-size=10
+spring.r2dbc.pool.max-idle-time=30m
+spring.r2dbc.pool.validation-query=SELECT 1
 spring.r2dbc.username=root
 spring.r2dbc.password=${mysqlRootPassword}
 # r2dbc logging level
 logging.level.org.springframework.data.r2dbc=DEBUG
-
 
 # ===============================
 # = TIME-SERIES DATABASE
