feat: add concurrent users and color to place in api contract and db

--- a/api/model/organization/PlaceData.v1.yaml
+++ b/api/model/organization/PlaceData.v1.yaml
@@ -5,10 +5,24 @@ properties:
   name:
     type: string
     example: Torre Archimede
+  color:
+    type: string
+    pattern: "^#([A-Fa-f0-9]{6})$"
+  maxConcurrentUsers:
+    type: integer
+    minimum: 0
   polygon:
     type: array
     description: An array of points that constitutes the perimeter of a place
-    example: [{latitude: 45.411564, longitude: 11.887473}, {latitude: 45.411225, longitude: 11.887325}, {latitude: 45.41111, longitude: 11.887784}, {latitude: 45.41144, longitude: 11.88795},]
+    example:
+      - latitude: 45.411564
+        longitude: 11.887473
+      - latitude: 45.411225
+        longitude: 11.887325
+      - latitude: 45.41111
+        longitude: 11.887784
+      - latitude: 45.41144
+        longitude: 11.88795
     minItems: 3
     items:
       type: object
@@ -29,12 +43,12 @@ properties:
         - longitude
   placeInfo:
     type: object
+    description: More information on a place.
     required:
       - address
       - city
       - zipcode
       - state
-    description: More information on a place.
     properties:
       address:
         type: string
@@ -44,7 +58,7 @@ properties:
         example: Padova
       zipcode:
         type: string
-        example: '35031'
+        example: "35031"
         minLength: 5
         maxLength: 5
       state:
@@ -52,5 +66,7 @@ properties:
         example: Italia
 required:
   - name
+  - color
+  - maxConcurrentUsers
   - polygon
   - placeInfo
