--- a/db/relational/Dockerfile
+++ b/db/relational/Dockerfile
@@ -2,12 +2,13 @@ FROM mysql:8.0
 
 LABEL maintainer="gruppone.swe@gmail.com"
 
+ENV TZ="Europe/Rome"
+
 COPY ./stalker-rdb-config-file.cnf /etc/mysql/conf.d/
 
-# TODO not sure we should create the db tables here. what happens when we spin up a new container?
 COPY create.sql /docker-entrypoint-initdb.d
 
-# XXX temporarily add some test data
+# add some test data
 COPY test-data.sql /docker-entrypoint-initdb.d
 
 EXPOSE 3306
