refactor: document exception and remove unneeded code

--- a/.env.template
+++ b/.env.template
@@ -10,8 +10,12 @@ INFLUXDB_ADMIN_PASSWORD=
 # JWT
 JWT_SECRET=
 
-# Email account used for password recovery
+# Email account used for password recovery.
 EMAIL_ACCOUNT_PASSWORD=
+# ----------------------------------------------------------------------------------------------------------
+# If you're using a gmail account, you need to enable the "less secure app access" option available on this page:
+# https://myaccount.google.com/lesssecureapps
+# ----------------------------------------------------------------------------------------------------------
 
 # SonarCloud login token
 SONARCLOUD_LOGIN=
