feat: update connection and measurement schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,12 +22,11 @@ logging.level.org.springframework.data.r2dbc=DEBUG
 # ===============================
 # = TIME-SERIES DATABASE
 # ===============================
-# cannot user spring.influx properties because they trigger an autoconfiguration class.
-influxdb.url=http://localhost:8086
+spring.influx.url=http://localhost:8086
+spring.influx.user=root
+spring.influx.password=${influxdbAdminPassword}
 influxdb.database=stalker-tsdb
-influxdb.retention=stalker-tsdb-retention-policy
-influxdb.user=root
-influxdb.password=${influxdbAdminPassword}
+influxdb.retention=default
 
 
 # ===============================
