--- a/db/time-series/Dockerfile
+++ b/db/time-series/Dockerfile
@@ -5,6 +5,6 @@ LABEL maintainer="gruppone.swe@gmail.com"
 
 COPY ./influxdb.conf /etc/influxdb/influxdb.conf
 
-COPY ./create.iql /docker-entrypoint-initdb.d/
+COPY ./create.iql ./test-data.iql /docker-entrypoint-initdb.d/
 
 EXPOSE 8086
