--- a/db/ldap/Dockerfile
+++ b/db/ldap/Dockerfile
@@ -2,5 +2,6 @@ FROM osixia/openldap:1.3.0
 
 LABEL maintainer="gruppone.swe@gmail.com"
 
-COPY ldap-data.ldif /container/service/slapd/assets/config/bootstrap/ldif/50-bootstrap.ldif
+#FIXME 50-bootstrap.ldif doesn't overwrite default file (the name is the same)
+COPY 50-bootstrap.ldif /container/service/slapd/assets/config/bootstrap/ldif
 
