--- a/db/ldap/docker-compose.yml
+++ b/db/ldap/docker-compose.yml
@@ -3,26 +3,36 @@ version: "3.7"
 services:
 
   ldap-server:
+
     build:
       context: .
 
     restart: always
 
     environment:
-      LDAP_ORGANISATION: Stalker test organization
+      LDAP_ORGANISATION: Stalker
       LDAP_DOMAIN: stalker.intern
-      LDAP_ADMIN_PASSWORD: test1234
+      LDAP_ADMIN_PASSWORD: adminPassword
       LDAP_BASE_DN: dc=stalker,dc=intern
 
-    expose:
-      # for unsecure connection
-      - "389"
-      # for encrypted SSL connection
-      - "636"
+    ports:
+      - "389:389"
+
+    # command: --copy-service
 
     volumes:
       - ldap-data:/var/lib/ldap
       - ldap-config:/etc/ldap/slapd.d
+
+  ldap-server-gui:
+    image: osixia/phpldapadmin:0.7.2
+
+    environment:
+      PHPLDAPADMIN_LDAP_HOSTS: ldap-server
+      PHPLDAPADMIN_HTTPS: 'false'
+
+    ports:
+      - 8090:80
 
 volumes:
   ldap-data:
