feat: add LdapConfiguration field in OrganizationDataDto.java

--- a/api/model/organization/OrganizationData.v1.yaml
+++ b/api/model/organization/OrganizationData.v1.yaml
@@ -30,9 +30,8 @@ properties:
         description: The password for the bind DN.
     required:
       - url
-      - searchQuery
-      - bindDn
-      - bindPassword
+      - username
+      - password
   creationDateTime:
     $ref: ../GenericTimestamp.v1.yaml
   lastChangeDateTime:
