refactor: save compacted access_log with infinite RP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,9 @@ spring.influx.url=http://localhost:8086
 spring.influx.user=root
 spring.influx.password=${influxdbAdminPassword}
 influxdb.database=stalker-tsdb
-influxdb.retention=default
+influxdb.measurement=access_log
+influxdb.default-retention=default
+influxdb.infinite-retention=infinite
 
 
 # ===============================
